--- a/index.html
+++ b/index.html
@@ -4,11 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="icon/favicon_assingnment.png">
+    <link rel="icon" type="image/x-icon" href="icon/favicon-r.png">
     <title>New Year New Mission</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+    </style>
 </head>
 <body>
+    <header class="header-container">
+       <h2 class="header-h">
+        All Thinks Are <br> Possible If You <br> believe
+       </h2>
+       <p class="header-p">
+
+       </p>
+       <button class="header_contact_btn">
+
+       </button>
+    </header>
+    <section class="failure-container">
+
+    </section>
     
 </body>
 </html>
