My Plans Section Done

--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@
             </p>
             <ul>
                 <li class="plans">
-                    <img src="/icon/codegear_icon.png" alt="" class="plan-icons">
-                    <h4 class="plan-heading">Web Development</h4>
-                    <p class="plan-description">I want to start</p>
+                    <div>
+                        <img src="/icon/codegear_icon.png" alt="" class="plan-icons">
+                        <h4 class="plan-heading">Web Development</h4>
+                        <p class="plan-description">I want to start</p>
+                    </div>
                 </li>
                 <li class="plans">
                     <img src="/icon/jsgear_icon.png" alt="" class="plan-icons">
