--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
                 There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words
             </p>
             <li class="contact">
-                <a href="mailto:mamunurrashid@strixdevs.com">
+                <a href="mailto:mamunurrashid@strixdevs.com" class="callme">
                     Email : mamunurrashid@strixdevs.com
                 </a>
             </li>
             <li class="contact">
-                <a href="https://wa.me/+8801630471221">
+                <a href="https://wa.me/+8801630471221" class="callme">
                     WhatsApp: +8801630471221
                 </a>
             </li>
@@ -157,7 +157,7 @@
 
         </div>
         <div class="footer-row">
-            <h3>
+            <h3 class="subscribe-header">
                 Subscribe
             </h3>
             <input type="email" placeholder="Enter your email" class="email-input">
