--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </li>
                 <li class="social-icons">
                     <a href="https://www.youtube.com/" class="social-links">
-                        <img src="https://cdn.discordapp.com/attachments/1058077037664944202/1060961830366892082/yt_icon.png" alt="" class="icons">
+                        <img src="/icon/yt_icon.png" alt="" class="icons">
                     
                     </a>
                 </li>
