--- a/index.html
+++ b/index.html
@@ -103,12 +103,14 @@
 
         <section class="positive-container">
 
-            <h3 class="positive-mindset">
-                Always keep a positive <br> Mindset
-            </h3>
-            <button class="call-now-btn">
-                Call Now
-            </button>
+            <div class="positive-box">
+                <h3 class="positive-mindset">
+                    Always keep a positive <br> Mindset
+                </h3>
+                <button class="call-now-btn">
+                    Call Now
+                </button>
+            </div>
 
         </section>
 
