additional section added

--- a/index.html
+++ b/index.html
@@ -99,6 +99,38 @@
             </ul>
         </section>
 
+        <!-- -----------------------------------My Aim Here----------------------------------- -->
+
+        <section class="goal-container">
+            <h2 class="my-goal">
+                My Goals
+            </h2>
+            <ul class="goal-ulist">
+                <li class="goals g-1">
+                    <img src="./icon/dev_icon.png" alt="" class="goal-icon">
+                    <h3 class="goal-heading">Become a Web Developer</h3>
+                    <p class="goal-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus minima asperiores corporis animi, odio odit.</p>
+                </li>
+                <li class="goals g-2">
+                    <img src="./icon/job_icon.png" alt="" class="goal-icon">
+                    <h3 class="goal-heading">Get a Job</h3>
+                    <p class="goal-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam voluptatibus laudantium dolor laborum ex earum.</p>
+                </li>
+            </ul>
+            <ul class="goal-ulist">
+                <li class="goals g-3">
+                    <img src="./icon/savemoney_icon.png" alt="" class="goal-icon">
+                    <h3 class="goal-heading">Save up Money</h3>
+                    <p class="goal-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente illo dolores suscipit eius vel aspernatur.</p>
+                </li>
+                <li class="goals g-4">
+                    <img src="./icon/plane_icon.png" alt="" class="goal-icon">
+                    <h3 class="goal-heading">Go to Canada</h3>
+                    <p class="goal-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae est laboriosam, odio possimus distinctio sint?</p>
+                </li>
+            </ul>
+        </section>
+
         <!-- ----------------------------------------Positive Mindset Here-------------------------------- -->
 
         <section class="positive-container">
